Page MenuHome GnuPG

Check problems with gpgconf and global config files
Closed, ResolvedPublic

Description

In 2.2 we have the problem that gpgconf reads config values from the global files but fails to set them then into the global file (error ignored).

Check what happens if an empty local config file exists and whether this allows to update this file.

Related Objects

Event Timeline

werner created this task.
werner changed the task status from Open to Testing.Oct 22 2021, 12:22 PM
werner moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
werner moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 22 2021, 12:25 PM
werner claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 2:07 PM